with new receipt printer functionality plus bug fixes and gc implementation